# krp_sim

./: .gitignore  Cargo.toml
error/config/: optimize_empty  process_missing_reqs  process_missing_res
src/: krp.rs  main.rs  parser.rs
src/common/: krp.rs  lib.rs  parser.rs
test/error/config/: no_optimize  no_stock  process_missing_cycle
test/error/trace/: not_enough
test/valid/: ikea  only_time
