[package]
name = "krpsim"
version = "0.1.0"
authors = ["mdeville"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0-alpha1"

[[bin]]
name="krpsim"
path="src/bin/krpsim.rs"

[[bin]]
name="krpsim_verif"
path="src/bin/krpsim_verif.rs"

[lib]
name="common"
path="src/common/lib.rs"